--- a/css/map.css
+++ b/css/map.css
@@ -1,3 +1,10 @@
+html, body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
 body {
     background-color: #f0f0f0;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -8,7 +15,7 @@ body {
 }
 
 .main-content {
-    /* flex: 1; */
+    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -39,7 +46,7 @@ a:hover {
 .introduction {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 
 .introduction p {
@@ -51,6 +58,11 @@ a:hover {
     height: 70vh;
     box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.35);
     margin: 0 auto;
+}
+
+.dropdown-container {
+    margin-bottom:1rem;
+    overflow-y: auto;
 }
 
 .icon-shadow {
@@ -81,7 +93,6 @@ a:hover {
     border-radius: 8px;
     padding: 10px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
-    /* text-transform: uppercase; */
 
     text-shadow:
         -0.75px -0.75px 0 black,
@@ -116,16 +127,13 @@ a:hover {
     }
 }
 
-/* Apply transition to all markers */
 .leaflet-marker-icon {
     transition: transform 0.3s ease-in-out;
 }
 
-/* Apply the hover effect to scale the icon */
 .leaflet-marker-icon:hover {
     filter: hue-rotate(90deg) saturate(2)drop-shadow(0px 0px 8px rgba(121, 121, 121, 0.8));
 }
-
 
 .hidden {
     display: none;
@@ -144,8 +152,6 @@ a:hover {
     white-space: nowrap;
     pointer-events: none;
     text-align: center;
-
-    /* Black outline effect */
     text-shadow:
         -1.5px -1.5px 0 black,
          1.5px -1.5px 0 black,
@@ -204,8 +210,13 @@ a:hover {
         width: 100%;
         height: calc(65vh);
         margin: 0;
+        margin-bottom: 3rem;
     }
 
+    .dropdown-container {
+        margin-bottom: 1rem;
+        overflow-y: auto;
+    }
 
     .leaflet-popup-content-wrapper {
         font-size: 0.9rem;
@@ -225,7 +236,7 @@ a:hover {
     color: white;
     font-size: 1.25rem;
     background: linear-gradient(to bottom right, #4D9966, #338855, #1F7744, #0A6633, #005522);
-    height: 4rem;
+    height: 3rem;
     text-align: center;
     display: grid;
     align-items: center;
