--- a/css/map.css
+++ b/css/map.css
@@ -58,6 +58,7 @@ a:hover {
     height: 70vh;
     box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.35);
     margin: 0 auto;
+    margin-bottom: 2rem;
 }
 
 .dropdown-container {
